2023-07-10T08:27:09Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5505811131 # 592
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-10
* notice: last 14d: unq all: 7 33
* notice: prev accum: outdated-unq outdated-all / unq all: 175 392 / 189 419
* notice: next accum: outdated-unq outdated-all / unq all: 175 392 / 193 425
* notice: prev exec diff / last date diff / accum: unq all: +4 +6 -0 -0 / +4 +6 -0 -0 / 4 6
* notice: removed / changed dates: [] / [2023-07-10]

2023-07-10T02:02:06Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5503222335 # 591
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-10
* notice: last 14d: unq all: 5 27
* notice: prev accum: outdated-unq outdated-all / unq all: 173 389 / 188 417
* notice: next accum: outdated-unq outdated-all / unq all: 175 392 / 189 419
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +2 +4 -0 -0 / 2 4
* notice: removed / changed dates: [2023-06-25] / [2023-07-09]

2023-07-09T16:25:07Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5500840690 # 590
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-09
* notice: last 14d: unq all: 5 27
* notice: prev accum: outdated-unq outdated-all / unq all: 173 389 / 188 416
* notice: next accum: outdated-unq outdated-all / unq all: 173 389 / 188 417
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-07-09]

2023-07-09T08:23:37Z: