@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-10T08:27:09Z",
-  "count" : 6,
-  "count_minmax" : [ 6, 6 ],
-  "count_decinc" : [ -0, +6 ],
-  "uniques" : 4,
-  "uniques_minmax" : [ 4, 4 ],
-  "uniques_decinc" : [ -0, +4 ]
+  "timestamp" : "2023-07-10T16:28:45Z",
+  "count" : 7,
+  "count_minmax" : [ 6, 7 ],
+  "count_decinc" : [ -0, +7 ],
+  "uniques" : 5,
+  "uniques_minmax" : [ 4, 5 ],
+  "uniques_decinc" : [ -0, +5 ]
 }
