@@ -1,12 +1,7 @@
 {
   "count": 33,
-  "uniques": 7,
+  "uniques": 8,
   "clones": [
-    {
-      "timestamp": "2023-06-26T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-06-27T00:00:00Z",
       "count": 3,
@@ -54,8 +49,8 @@
     },
     {
       "timestamp": "2023-07-10T00:00:00Z",
-      "count": 6,
-      "uniques": 4
+      "count": 7,
+      "uniques": 5
     }
   ]
 }
