@@ -1,3 +1,12 @@
+2023-07-10T16:28:45Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5510551336 # 593
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-10
+* notice: last 14d: unq all: 8 33
+* notice: prev accum: outdated-unq outdated-all / unq all: 175 392 / 193 425
+* notice: next accum: outdated-unq outdated-all / unq all: 176 393 / 194 426
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +5 +7 -0 -0 / 5 7
+* notice: removed / changed dates: [2023-06-26] / [2023-07-10]
+
 2023-07-10T08:27:09Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5505811131 # 592
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-10
